--- a/zero2prod/Cargo.toml
+++ b/zero2prod/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 actix-web = "4.12.1"
 reqwest = "0.13.1"
+serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
